@@ -114,7 +114,7 @@ var CloudCommander, Util,
         lElement.addEventListener(
             pType,
             pListener,
-            pUseCapture || false
+            pUseCapture
         );
         
         Listeners.push({
@@ -133,14 +133,13 @@ var CloudCommander, Util,
      * @param pElement {document by default}
      */
     DOM.addOneTimeListener       = function(pType, pListener, pElement, pUseCapture){
-        var lRet = this;
-        
-        DOM.addListener(pType,
-            function oneTime(pEvent){
-                DOM.removeListener(pType, oneTime, pElement, pUseCapture);
+        var lRet        = this,
+            lOneTime    = function (pEvent){
+                DOM.removeListener(pType, lOneTime, pElement, pUseCapture);
                 pListener(pEvent);
-            },
-            pUseCapture, pElement);
+            };
+        
+        DOM.addListener(pType, lOneTime, pElement, pUseCapture);
         
         return lRet;
     };
@@ -158,7 +157,7 @@ var CloudCommander, Util,
         (pElement || window).removeEventListener(
             pType,
             pListener,
-            pUseCapture || false
+            pUseCapture
         );
         
         return lRet;
