@@ -179,13 +179,7 @@ var CloudCommander, Util, DOM, $;
             },
             
             // define the elements of the menu
-            items: getAllItems(lMenuItems),
-            events:{
-                hide: function(){
-                    var lLayer = DOM.getById('context-menu-layer');
-                    DOM.addOneTimeListener('contextmenu', clickProcessing, lLayer);
-                }
-            }
+            items: getAllItems(lMenuItems)
         };
         
         return lRet;
@@ -222,7 +216,7 @@ var CloudCommander, Util, DOM, $;
      * is not going on. All magic happening in
      * DOM tree
      */
-    function clickProcessing(pEvent){
+       function clickProcessing(pEvent){
         /* if clicked on menu item */
         var lParent     = pEvent.target.parentElement,
             lClassName  = lParent && lParent.className;
@@ -268,14 +262,53 @@ var CloudCommander, Util, DOM, $;
         }
     }
     
+    function __clickProcessing(pEvent){
+        var lLayer = DOM.getById('context-menu-layer');
+        if(lLayer){
+            var lStyle,
+                lParent;
+            
+            if(lLayer)
+                lStyle = lLayer.style.cssText;
+            /* hide invisible menu layer */
+            if(lStyle)
+                lLayer.style.cssText = lStyle
+                    .replace('z-index: 1', 'z-index:-1');
+            
+            var lElement;
+            if(pEvent.$trigger)
+                lElement = pEvent.$trigger[0];
+            else
+                lElement    = document.elementFromPoint(pEvent.x, pEvent.y);
+            
+            var lTag        = lElement.tagName;
+            
+            if(lTag === 'A' || lTag === 'SPAN'){
+                if (lElement.tagName === 'A')
+                    lParent = lElement.parentElement.parentElement;
+                else if(lElement.tagName === 'SPAN')
+                    lParent = lElement.parentElement;
+                    
+                if(lParent.className === '')
+                    DOM.setCurrentFile(lParent);
+            }
+            else
+                DOM.setCurrentFile(lElement);
+            
+            /* show invisible menu layer */
+            if(lLayer && lStyle)
+                lLayer.style.cssText = lStyle;
+            
+            KeyBinding.set();
+        }
+    }
+    
     
     function set(){
         if(!MenuSeted){
             $.contextMenu(getConfig());
-            
-            DOM.addClickListener(clickProcessing);
-            
             MenuSeted = true;
+            DOM.addListener('mousedown', clickProcessing);
         }
     }
     
